# capture-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/capture/: __init__.py  client.py
tests/: test_capture.py  test_e2e.py
